--- a/index.html
+++ b/index.html
@@ -21,33 +21,42 @@
     <script type="module" src="/src/main.js" defer></script>
   </head>
   <body>
+    <main>
+      <section aria-labelledby="sign-up">
+        <picture>
+          <source media="(width > 75em)" srcset="/src/assets/images/illustration-sign-up-desktop.svg">
+          <img src="/src/assets/images/illustration-sign-up-mobile.svg" alt="" width="375" height="284">
+        </picture>
 
-    <!-- Sign-up form start -->
+        <div>
+          <h2 id="sign-up">Stay updated!</h2>
+          <p>Join 60,000+ product managers receiving monthly updates on:</p>
+          <ul>
+            <li>Product discovery and building what matters</li>
+            <li>Measuring to ensure updates are a success</li>
+            <li>And much more!</li>
+          </ul>
+          <form id="form" novalidate>
+            <div>
+              <label for="email">Email address</label>
+              <span aria-live="polite" id="email-error"></span>
+            </div>
+            <input type="email" id="email" name="email" placeholder="email@company.com" aria-describedby="email-error">
+            <button type="submit">Subscribe to monthly newsletter</button>
+          </form>
+        </div>
+      </section>
 
-    Stay updated!
-
-    Join 60,000+ product managers receiving monthly updates on:
-
-    Product discovery and building what matters
-    Measuring to ensure updates are a success
-    And much more!
-
-    Email address
-    email@company.com
-
-    Subscribe to monthly newsletter
-
-    <!-- Sign-up form end -->
-
-    <!-- Success message start -->
-
-    Thanks for subscribing!
-
-    A confirmation email has been sent to ash@loremcompany.com. 
-    Please open it and click the button inside to confirm your subscription.
-
-    Dismiss message
-
-    <!-- Success message end -->
+      <dialog aria-labelledby="modal-title" aria-describedby="modal-desc">
+        <div>
+          <img src="/src/assets/images/icon-success.svg" alt="" width="64" height="64">
+          <h2 id="modal-title">Thanks for subscribing!</h2>
+          <p id="modal-desc">A confirmation email has been sent to <span></span>. 
+            Please open it and click the button inside to confirm your subscription.
+          </p>
+          <button>Dismiss message</button>
+        </div>
+      </dialog>
+    </main>
   </body>
 </html>
