Add basic CSS styles

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
       </section>
 
-      <dialog aria-labelledby="modal-title" aria-describedby="modal-desc">
+      <dialog open aria-labelledby="modal-title" aria-describedby="modal-desc">
         <div>
           <img src="/src/assets/images/icon-success.svg" alt="" width="64" height="64">
           <h2 id="modal-title">Thanks for subscribing!</h2>
