Add tablet styles

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body class="body">
     <main class="main">
       <section class="sign-up" aria-labelledby="sign-up">
-        <picture>
+        <picture class="sign-up__picture">
           <source media="(width > 75em)" srcset="/src/assets/images/illustration-sign-up-desktop.svg">
           <img class="sign-up__img" src="/src/assets/images/illustration-sign-up-mobile.svg" 
                 alt="" width="375" height="284">
@@ -63,7 +63,6 @@
           </p>
           <button class="modal__button">Dismiss message</button>
         </div>
-        
       </dialog>
     </main>
   </body>
